[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "marktplaats"
version = "0.3.0"
description = "A small Python package to request listings from marktplaats.nl"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Jens de Ruiter", email = "me@jensderuiter.dev" },
]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.28.2",
  "BeautifulSoup4>=4.13.4",
  "typing-extensions>=4.13.2",
]

urls.bugs = "https://github.com/jensjeflensje/marktplaats-py/issues"
urls.homepage = "https://github.com/jensjeflensje/marktplaats-py"
