[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11,<0.12" ]

[project]
name = "marktplaats"
version = "0.5.0"
description = "A small Python package to request listings from marktplaats.nl"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jens de Ruiter", email = "me@jensderuiter.dev" },
]
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: Dutch",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.28.2",
    "typing-extensions>=4.13.2",
]
urls.bugs = "https://github.com/jensjeflensje/marktplaats-py/issues"
urls.homepage = "https://github.com/jensjeflensje/marktplaats-py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "responses>=0.26",
]

[tool.ruff]
lint.select = [
    "ALL",
    "call-datetime-today", # Useful outside of timezones
]
lint.ignore = [
    "CPY",                               # No copyright statements
    "D1",                                # Docstrings should not be enforced by default
    "DTZ",                               # (project) We use naive timezones everywhere TODO: maybe this should be looked at
    "incorrect-blank-line-before-class", # Choose D203 or D211
    "missing-trailing-comma",            # Conflict with formatter
    "multi-line-summary-first-line",     # Choose D212 or D213
    "suspicious-subprocess-import",      # Uses of subprocess are rejected, no need to reject the imports as well
]
lint.per-file-ignores."scripts/**/*.py" = [
    "assert",                               # We assume we don't run scripts with -O
    "banned-api",                           # The banned APIs only apply to marktplaats itself
    "implicit-namespace-package",           # `scripts` is not a package
    "print",                                # We can print in scripts
    "raise-vanilla-class",                  # In scripts, we throw `Exception` to just crash.
    "start-process-with-partial-path",      # Partial executable path
    "subprocess-without-shell-equals-true", # Use of subprocess
]
lint.per-file-ignores."tests/**/*.py" = [
    "assert",                     # Assert is allowed in tests
    "banned-api",                 # The banned APIs only apply to marktplaats itself
    "FBT",                        # We don't care about boolean parameters in tests
    "implicit-namespace-package", # Tests are supposed to be an implicit namespace
    "line-too-long",              # If the formatter doesn't fix the line length, it's good enough
    "magic-value-comparison",     # Magic values are allowed in tests
]
lint.flake8-tidy-imports.ban-relative-imports = "all"  # For consistency
lint.flake8-tidy-imports.banned-api.requests = { msg = "Use utils.get_request instead" }
lint.isort.combine-as-imports = true
lint.isort.lines-after-imports = 2
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.preview = true

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
exclude = "^tests/"
# It already warns for the import, so we do not want to warn for each individual use.
# If the import is silenced, there's nothing else we can do so silence the uses as well.
# disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
    "deprecated",
    "ignore-without-code",
    "mutable-override",
    "possibly-undefined",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]
extra_checks = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict_bytes = true
strict = true  # All strict checks are already listed below, only here for future-proofing
show_error_context = true
pretty = true
warn_unused_configs = true
show_error_codes = true
